dropshot/tests/fail/bad_channel1b.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel1b.rs:12:1
   |
12 | / async fn bad_channel(
13 | |     _upgraded: WebsocketConnection,
14 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: endpoint `bad_channel` must have at least two arguments: RequestContext and WebsocketConnection
  --> tests/fail/bad_channel1b.rs:12:21
   |
12 |   async fn bad_channel(
   |  _____________________^
13 | |     _upgraded: WebsocketConnection,
14 | | ) -> dropshot::WebsocketChannelResult {
   | |_^
